--- a/stm32f446/VibrationAnalysis446.ioc
+++ b/stm32f446/VibrationAnalysis446.ioc
@@ -44,12 +44,13 @@ Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PA2
 Mcu.Pin2=PA3
-Mcu.Pin3=PB6
-Mcu.Pin4=PB8
-Mcu.Pin5=PB9
-Mcu.Pin6=VP_SYS_VS_Systick
-Mcu.Pin7=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=8
+Mcu.Pin3=PA5
+Mcu.Pin4=PB6
+Mcu.Pin5=PB8
+Mcu.Pin6=PB9
+Mcu.Pin7=VP_SYS_VS_Systick
+Mcu.Pin8=VP_TIM2_VS_ClockSourceINT
+Mcu.PinsNb=9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -73,6 +74,8 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA5.Locked=true
+PA5.Signal=GPIO_Output
 PB6.GPIOParameters=GPIO_Speed
 PB6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB6.Locked=true
@@ -100,7 +103,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
@@ -155,7 +158,7 @@ RCC.VCOSAIInputFreq_Value=1000000
 RCC.VCOSAIOutputFreq_Value=192000000
 TIM2.IPParameters=Prescaler
 TIM2.Prescaler=89
-USART2.BaudRate=2000000
+USART2.BaudRate=57600
 USART2.IPParameters=VirtualMode,BaudRate
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
